# geo-analytics

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md  template-link.yaml
.claude/agents/code-quality/: code-cleaner.md  python-developer.md  test-generator.md
.claude/agents/domain/: ai-developer.md  frontend-developer.md  geo-analytics-expert.md
.claude/agents/workflow/: brainstorm-agent.md  build-agent.md  define-agent.md  design-agent.md  iterate-agent.md  ship-agent.md
.claude/commands/: brainstorm.md  build.md  contribute.md  create-pr.md  define.md  design.md  distill.md  iterate.md  project-init.md  readme-maker.md  review.md  ship.md  telemetry.md
.claude/dev/: _index.md
.claude/kb/: _index.yaml
.claude/kb/_templates/: concept.md.template  pattern.md.template
.claude/kb/geospatial-etl/: index.md  quick-reference.md
.claude/kb/maplibre/: index.md  quick-reference.md
.claude/kb/pmtiles-tippecanoe/: index.md  quick-reference.md
.claude/sdd/: _index.md  readme.md
.claude/sdd/examples/: readme.md
data/: README.md
deploy/: Caddyfile  Caddyfile.local  README.md  deploy.sh
docs/: prd-plataforma-geo.md
pipeline/: .dockerignore  Dockerfile  README.md  datasets.yaml  pyproject.toml
pipeline/src/geo_pipeline/: __init__.py  antennas.py  basemap.py  cli.py  config.py  convert.py  tiles.py
pipeline/tests/: test_antennas.py  test_config.py
pipeline/tests/fixtures/: antenas_sample.csv
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
(+34 files in other folders)
