[project]
name = "geo-pipeline"
version = "0.1.0"
description = "ETL geoespacial: fontes IBGE/antenas -> GeoParquet canonico -> PMTiles"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.0",
    "pyarrow>=16",
    "pyyaml>=6",
    "pydantic>=2",
]

[project.scripts]
geo-pipeline = "geo_pipeline.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
